# ai-doc-search

./: Makefile  pyproject.toml
src/ai_search_doc/: crew.py  main.py
src/ai_search_doc/config/: agents.yaml  tasks.yaml
