[project]
name = "ai_search_doc"
version = "0.1.0"
description = "ai-search-doc using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
ai_search_doc = "ai_search_doc.main:run"
run_crew = "ai_search_doc.main:run"
train = "ai_search_doc.main:train"
replay = "ai_search_doc.main:replay"
test = "ai_search_doc.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
